# dictator

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  .tmux-sessionizer  CLAUDE.md  PLAN.md  README.md  STREAMING_SPEC.md  app.go  biome.json  bun.lockb  config.go  dictator.service  electron-builder.json5  flake.nix  go.mod  go.sum  index.html  log.go  main.go  main.js  makefile  migrate-xdg.sh  package-lock.json  package.json  preload.js  pyproject.toml  recorder.go  renderer.js  requirements.txt  style.css  tailwind.config.js  tsconfig.json  utils.go  vite.config.ts  wails.json
.github/workflows/: release.yml
app/: audio.go  config.go  files.go  log.go  whisper.go  whisper_client.go
config/: config.go
electron/: main.js  preload.cjs  preload.js  utils.js
electron/whisper/: requirements.txt  worker.py
examples/quickshell-osd/: README.md  shell.qml
frontend/: bun.lockb  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: RecordingWindow.tsx  SelectBox.tsx  SettingsPanel.tsx
frontend/src/components/visualizer/: index.ts  utils.ts  visualizer.tsx
frontend/src/lib/: themes.ts  utils.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/audio/: recorder.go  transcribe.go
internal/cmd/: commands.go
internal/config/: config.go
internal/daemon/: daemon.go  daemon_test.go
internal/ipc/: client.go  protocol.go  server.go
internal/logger/: logger.go
internal/notifier/: dbus.go  dunst.go
internal/overlay/: overlay.go
internal/storage/: database.go  transcripts.go
internal/streaming/: client.go  handler.go
internal/typing/: typer.go
internal/utils/: config.go  utils.go
internal/visual/: event.go  socket.go  socket_test.go
ispy/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  worker.py
nix/: home-manager.nix
overlay/: default.nix  pyproject.toml
overlay/dictator_overlay/: __init__.py  main.py
scripts/: setup-whisper.sh
src/: App.jsx  App.tsx  config.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  files.rs  lib.rs  main.rs  whisper.rs
src/components/: Recorder.tsx  SelectBox.tsx  SettingsPanel.tsx  Transcript.tsx  mic-button.jsx  recording-indicator.jsx  status-message.jsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useKeyboardControls.ts  useRecording.ts  useWindowSize.ts
src/lib/: ThemeContext.tsx  themes.ts  utils.ts
