[project]
name = "dictator-overlay"
version = "0.1.0"
description = "GTK4 layer-shell overlay for Dictator streaming preview"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.50.0",
]

[project.scripts]
dictator-overlay = "dictator_overlay.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
