[package]
name = "dictator"
version = "0.1.0"
description = "Dictator - Speech-to-text via Whisper"
authors = ["kabilan108"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dictator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
cpal = "0.15"
hound = "3.5" # For WAV writing

# Networking & Async
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] } # Async runtime

# Configuration & Paths
directories-next = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error Handling
thiserror = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, enabling the Tauri UI
# If you always dev with a dev server, you can remove this feature and the related build command
default = ["custom-protocol"]
# This feature is used to enable the production bundle embedding of the UI assets
custom-protocol = ["tauri/custom-protocol"]
